--- a/src/components/Logo/styles/index.css
+++ b/src/components/Logo/styles/index.css
@@ -1,3 +1,11 @@
 .logo {
-    margin: 3.25rem
-}
+    max-width: 100%;
+    height: auto;
+    margin: 3.25rem;
+  }
+
+  @media screen and (max-width: 600px) {
+    .logo {
+      max-width: 80%;
+    }
+  }
